Changelog
==========

version 0.70
------------
* Dependency cleanup

Version 0.68
-------------
* Added a Changelog :)
* Better looking navigation drawer
* Some UI tweeks
* Fixed the position of the empty subscription screen

Version 0.66
-------------
* Fixed Crash