@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/menu_refresh_feed"
+        android:orderInCategory="2"
+        android:title="@string/menu_refresh_feed">
+    </item>
+
+</menu>
