@@ -176,5 +176,6 @@
     <string name="playlist_filter_prefix">Show:</string>
     <string name="preference_first_run_key">firstrun</string>
     <string name="menu_feedback">Feedback</string>
+    <string name="menu_refresh_feed">Refresh</string>
 
 </resources>
